--- a/.gitignore
+++ b/.gitignore
@@ -67,11 +67,17 @@ jspm_packages/
 .yarn-integrity
 
 # dotenv environment variable files
-# .env
-# .env.development.local
-# .env.test.local
-# .env.production.local
-# .env.local
+.env
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
+
+# Database
+*.sqlite
+
+# User-generated content
+storage/
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
